--- a/public/items/90_snail/index.html
+++ b/public/items/90_snail/index.html
@@ -1838,8 +1838,8 @@
 <div><strong>Description:</strong> </div>
 </div>
 <div class="item_thumbnail_detail">
-<img src="https://meqn67oobpywejckreyjso4tcf4zrqldhbjph5m6jkqgqpq.arweave.net/-YSDffc4L8W-IkS_okwmTuTEXmYwWM4UvP1nkqgaD-4"><br/>
-<div><a href="https://www.spacescan.io/xch/coin/0x8a4cbd2ba8d672dec5f1efbc731e955d9400f450834ff66dd8a5f247f81a255a"><strong>Name:</strong> snail099</a></div>
+<img src="https://zntk24y35rivkao5ogamd5cftzjp3aer2drev7mkwf4q2.arweave.net/y2atcxvsUV-UB3XGAwfR__FnlL9gJH_Q4kr9irF5_DU"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0xe53690d97e42cba1161d70a6f9725c20a5fb79a115b8b9d314dc22f1bdcbba85"><strong>Name:</strong> snail099</a></div>
 <div><strong>Collection:</strong> Sheesh! Snail</div>
 <div><strong>antenna:</strong> 1/5</div>
 <div><strong>Background:</strong> 1/5</div>
@@ -1849,8 +1849,8 @@
 555 colorful snails slip into the CHIA net</div>
 </div>
 <div class="item_thumbnail_detail">
-<img src="https://zntk24y35rivkao5ogamd5cftzjp3aer2drev7mkwf4q2.arweave.net/y2atcxvsUV-UB3XGAwfR__FnlL9gJH_Q4kr9irF5_DU"><br/>
-<div><a href="https://www.spacescan.io/xch/coin/0xe53690d97e42cba1161d70a6f9725c20a5fb79a115b8b9d314dc22f1bdcbba85"><strong>Name:</strong> snail099</a></div>
+<img src="https://meqn67oobpywejckreyjso4tcf4zrqldhbjph5m6jkqgqpq.arweave.net/-YSDffc4L8W-IkS_okwmTuTEXmYwWM4UvP1nkqgaD-4"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x8a4cbd2ba8d672dec5f1efbc731e955d9400f450834ff66dd8a5f247f81a255a"><strong>Name:</strong> snail099</a></div>
 <div><strong>Collection:</strong> Sheesh! Snail</div>
 <div><strong>antenna:</strong> 1/5</div>
 <div><strong>Background:</strong> 1/5</div>
@@ -2140,17 +2140,6 @@
 555 colorful snails slip into the CHIA net</div>
 </div>
 <div class="item_thumbnail_detail">
-<img src="https://xtbvysfibbj5utyxgijguhybqhff2tyc2pnht2qv3tagecne.arweave.net/vMN_cSKgIU9pP-FzISah8BgcpdTwLT2nnqFd-zAYgmk"><br/>
-<div><a href="https://www.spacescan.io/xch/coin/0xc82c52544f28ee3572cfa4a4c45b2178f6f8ed931cf00a1521deb303d65140dc"><strong>Name:</strong> snail200</a></div>
-<div><strong>Collection:</strong> Sheesh! Snail</div>
-<div><strong>antenna:</strong> 1/5</div>
-<div><strong>Background:</strong> 1/5</div>
-<div><strong>body:</strong> 1/5</div>
-<div><strong>shell:</strong> 1/5</div>
-<div><strong>Description:</strong> In a green world of flowers and vegetation live curious snails waiting to be discovered.
-555 colorful snails slip into the CHIA net</div>
-</div>
-<div class="item_thumbnail_detail">
 <img src="https://gxfh3t3hvs2rd67jckust63dr2ja3rxsjctxoqylai6fxh2tlq.arweave.net/Ncp9z2estRH7_6RKpKftjjpINxvJIp3dDCwI8W59TXM"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x4b9e2401f00bc187c9cb1eea8e4549e7dc6da9bd1f7884cb5219d2056cf5ab2a"><strong>Name:</strong> snail205</a></div>
 <div><strong>Collection:</strong> Sheesh! Snail</div>
@@ -2202,6 +2191,16 @@
 <div><strong>shell:</strong> 1/5</div>
 <div><strong>Description:</strong> In a green world of flowersvegetation live curious snails waiting to be discovered.
 555 colorful snails slip into the CHIA net</div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://roqmmfgqxishz5ho5tg5miwg4ijftvb4pxlsrl2ci2co3r4t5aja.arweave.net/i6DGFNC6JHz07uzN1iLG4hJZ1Dx91yivQkaE7ceT6BI"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0xd362d3e65e4752aa6f27255fddf3e25bcdd3416d4fd0d4de7e9664d1025a77b4"><strong>Name:</strong> snail225</a></div>
+<div><strong>Collection:</strong> Sheesh! Snail</div>
+<div><strong>antenna:</strong> 1/5</div>
+<div><strong>Background:</strong> 1/5</div>
+<div><strong>body:</strong> 1/5</div>
+<div><strong>shell:</strong> 1/5</div>
+<div><strong>Description:</strong> </div>
 </div>
 <div class="item_thumbnail_detail">
 <img src="https://yek4ibjyespgaicr6djegitsnygmdduhfedcyx6lvxxyu4a7mtra.arweave.net/wRXEBTgknmAgUfDSQyJybgzBjocpBixfy63vinAfZOI"><br/>
