--- a/public/items/90_ChiaSlime/index.html
+++ b/public/items/90_ChiaSlime/index.html
@@ -3979,6 +3979,26 @@
 <div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
 </div>
 <div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/rock/build/images/209.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0xdd39eef2b58f1ee518d98c8b17e5cfcf0aeac86edfc2faaeb51b5694f4890d72"><strong>Name:</strong> Chia Slime #209</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> None</div>
+<div><strong>Acs3:</strong> None</div>
+<div><strong>Color:</strong> Rock-RockyBrown-5b482a</div>
+<div><strong>Drop Set:</strong> Rock</div>
+<div><strong>Floor:</strong> Cave2-SW</div>
+<div><strong>Hidden Power:</strong> None</div>
+<div><strong>Mood:</strong> Cocky-Left</div>
+<div><strong>Narrative Block:</strong> Life</div>
+<div><strong>Other Info:</strong> None</div>
+<div><strong>Sky:</strong> Stary Night</div>
+<div><strong>Stickyness:</strong> 91</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 81</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://chiaslimes.s3.us-west-1.amazonaws.com/build/images/21.png"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x6694e1bbb1fce493ca013912d51b65c57e4660998c27fed9de80c125da49b5ea"><strong>Name:</strong> Chia Slime #21</a></div>
 <div><strong>Collection:</strong> Chia Slimes</div>
@@ -5919,6 +5939,46 @@
 <div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
 </div>
 <div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/rock/build/images/373.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x7d96cf7fe40cb5ea8d6d40728d82f315b04165e7782a2d53d1545497276c7a21"><strong>Name:</strong> Chia Slime #373</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> None</div>
+<div><strong>Acs3:</strong> None</div>
+<div><strong>Color:</strong> Rock-RockyBrown-5b482a</div>
+<div><strong>Drop Set:</strong> Rock</div>
+<div><strong>Floor:</strong> Cave1</div>
+<div><strong>Hidden Power:</strong> None</div>
+<div><strong>Mood:</strong> Cocky-Left</div>
+<div><strong>Narrative Block:</strong> Life</div>
+<div><strong>Other Info:</strong> None</div>
+<div><strong>Sky:</strong> Stary Night</div>
+<div><strong>Stickyness:</strong> 90</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 71</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/rock/build/images/374.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0xe1cea4757f5bc5953aabd0a493fabdb4515726b7494078e90263c5381ee5bf0f"><strong>Name:</strong> Chia Slime #374</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> RockSpikes</div>
+<div><strong>Acs3:</strong> None</div>
+<div><strong>Color:</strong> Rock-GolemGray-565655</div>
+<div><strong>Drop Set:</strong> Rock</div>
+<div><strong>Floor:</strong> Mountains</div>
+<div><strong>Hidden Power:</strong> Defensive Aura</div>
+<div><strong>Mood:</strong> Confident-Left</div>
+<div><strong>Narrative Block:</strong> Life</div>
+<div><strong>Other Info:</strong> None</div>
+<div><strong>Sky:</strong> Stary Night</div>
+<div><strong>Stickyness:</strong> 48</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 77</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://chiaslimes.s3.us-west-1.amazonaws.com/build/images/38.png"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x31a61752833d90ccffc544721f51b1cd805d2e5c1ca08f55995676db40ec27d0"><strong>Name:</strong> Chia Slime #38</a></div>
 <div><strong>Collection:</strong> Chia Slimes</div>
@@ -6639,6 +6699,26 @@
 <div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
 </div>
 <div class="item_thumbnail_detail">
+<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/build/images/7.png"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0x5c85cd681c91bd161abdeb6e650f237b7cc1cc20121e22917c3b765a978d59d7"><strong>Name:</strong> Chia Slime #7</a></div>
+<div><strong>Collection:</strong> Chia Slimes</div>
+<div><strong>Acs1:</strong> Basic Shine</div>
+<div><strong>Acs2:</strong> None</div>
+<div><strong>Acs3:</strong> None</div>
+<div><strong>Color:</strong> Alpha-Blue-0101b5</div>
+<div><strong>Drop Set:</strong> Alpha</div>
+<div><strong>Floor:</strong> Dirt</div>
+<div><strong>Hidden Power:</strong> None</div>
+<div><strong>Mood:</strong> Blank-Right</div>
+<div><strong>Narrative Block:</strong> The Beginning</div>
+<div><strong>Other Info:</strong> None</div>
+<div><strong>Sky:</strong> Cloudy</div>
+<div><strong>Stickyness:</strong> 27</div>
+<div><strong>Volume:</strong> 1</div>
+<div><strong>Weight:</strong> 55</div>
+<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://chiaslimes.s3.us-west-1.amazonaws.com/build/images/70.png"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0x9fa64969c3155b9722c48c1521ed522eab67dd1ff9abf86c81944fb7d3ca9e94"><strong>Name:</strong> Chia Slime #70</a></div>
 <div><strong>Collection:</strong> Chia Slimes</div>
@@ -6896,26 +6976,6 @@
 <div><strong>Stickyness:</strong> 65</div>
 <div><strong>Volume:</strong> 1</div>
 <div><strong>Weight:</strong> 42</div>
-<div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
-</div>
-<div class="item_thumbnail_detail">
-<img src="https://chiaslimes.s3.us-west-1.amazonaws.com/build/images/82.png"><br/>
-<div><a href="https://www.spacescan.io/xch/coin/0x97087d408d4c2dae301b35e5b801d7c99ff22bb769146a8737fae48c4416db08"><strong>Name:</strong> Chia Slime #82</a></div>
-<div><strong>Collection:</strong> Chia Slimes</div>
-<div><strong>Acs1:</strong> Basic Shine</div>
-<div><strong>Acs2:</strong> Rippled</div>
-<div><strong>Acs3:</strong> None</div>
-<div><strong>Color:</strong> Alpha-Green-00af29</div>
-<div><strong>Drop Set:</strong> Alpha</div>
-<div><strong>Floor:</strong> Grassy2</div>
-<div><strong>Hidden Power:</strong> None</div>
-<div><strong>Mood:</strong> Blank-Right</div>
-<div><strong>Narrative Block:</strong> The Beginning</div>
-<div><strong>Other Info:</strong> None</div>
-<div><strong>Sky:</strong> Clear Skies</div>
-<div><strong>Stickyness:</strong> 77</div>
-<div><strong>Volume:</strong> 1</div>
-<div><strong>Weight:</strong> 8</div>
 <div><strong>Description:</strong> Thematic slime drops on the Chia Blockchain!</div>
 </div>
 <div class="item_thumbnail_detail">
