--- a/public/items/90_Deer/index.html
+++ b/public/items/90_Deer/index.html
@@ -2649,21 +2649,6 @@
 <div><strong>Description:</strong> Deer 74/300</div>
 </div>
 <div class="item_thumbnail_detail">
-<img src="https://56cvjmcfq7hjvrm7im34ujcq52fabrsmy7smcgrq2q664rrwne.arweave.net/74VUsEWHzprFn0M3yiRQ_7ooAxkzH5MEaMNQ97kY2aU"><br/>
-<div><a href="https://www.spacescan.io/xch/coin/0xc36e09c4b9e7b05384e43b3109d6780d890c741b253308242eadc77fe4db2c12"><strong>Name:</strong> Deer #075</a></div>
-<div><strong>Collection:</strong> Chreatures</div>
-<div><strong>Accessory:</strong> Arrow</div>
-<div><strong>Antlers:</strong> Majestic</div>
-<div><strong>background:</strong> Speed (Yellow)</div>
-<div><strong>Deer:</strong> Topaz</div>
-<div><strong>Eye:</strong> Black</div>
-<div><strong>Fur:</strong> Sand</div>
-<div><strong>Hooves:</strong> Black (Flashy)</div>
-<div><strong>Nose:</strong> Brown</div>
-<div><strong>Spots:</strong> Yellow</div>
-<div><strong>Description:</strong> Deer 75/300</div>
-</div>
-<div class="item_thumbnail_detail">
 <img src="https://2ea4ltnoaskhgyter2vcl66tilytdmjor7eiob5hg74ys434.arweave.net/0QHFza4ElHNiZI6qJf_vTQvExsS6PyIcHp-zf5iX_N8"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0xf96eebc29968cefe87637791d39b40c4a080280b792558bbc2620d38e3ca7f17"><strong>Name:</strong> Deer #076</a></div>
 <div><strong>Collection:</strong> Chreatures</div>
@@ -5152,6 +5137,21 @@
 <div><strong>Nose:</strong> Black</div>
 <div><strong>Spots:</strong> Sapphire</div>
 <div><strong>Description:</strong> Deer 241/300</div>
+</div>
+<div class="item_thumbnail_detail">
+<img src="https://e62jitnixsvnxwszyk2v7ewmpzondcvg2wdgdmwxkiqfyark.arweave.net/J_7SUTai8qtvaWcK1X5LMflzRiq-bVhmGy11IgXAIqY"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0xbfc0e6d167db534f0c51a413c05681d0470ed11ed4d8f15833db1f00df70bb5b"><strong>Name:</strong> Deer #242</a></div>
+<div><strong>Collection:</strong> Chreatures</div>
+<div><strong>Accessory:</strong> Arrow</div>
+<div><strong>Antlers:</strong> Medium (Vines)</div>
+<div><strong>background:</strong> Aura (Beige)</div>
+<div><strong>Deer:</strong> Fern</div>
+<div><strong>Eye:</strong> Black</div>
+<div><strong>Fur:</strong> Emerald</div>
+<div><strong>Hooves:</strong> Brown</div>
+<div><strong>Nose:</strong> Black</div>
+<div><strong>Spots:</strong> Orange</div>
+<div><strong>Description:</strong> Deer 242/300</div>
 </div>
 <div class="item_thumbnail_detail">
 <img src="https://rdhren6ghnuzd5xdphtnzb3x5ysluamfkawuaymwpbkv7t3ftq.arweave.net/iM8SN8Y7aZH243nm3Id37iS6AYVQLUBhlnhVX89-lnA"><br/>
