--- a/public/items/90_BraveSeedling/index.html
+++ b/public/items/90_BraveSeedling/index.html
@@ -2129,6 +2129,16 @@
 <div><strong>Description:</strong> My favorite cat. You have no idea how fat he is...</div>
 </div>
 <div class="item_thumbnail_detail">
+<img src="https://tuxxmwhzgevbilduxxocbzgdxyixvghupnvhdwhctqkt4gubki.arweave.net/nS92WPkxKhQsdL3cIOTD-vhF6mPR7anHY4pwVPhqBUg"><br/>
+<div><a href="https://www.spacescan.io/xch/coin/0xdf018348bb6a0b641aca9e722c6adac17b19d3b0ae9476c0c35b45f0aeb6a487"><strong>Name:</strong> Brave Seedling #00064</a></div>
+<div><strong>Collection:</strong> Brave Seedling</div>
+<div><strong>drip:</strong> blue down</div>
+<div><strong>seedling:</strong> green health</div>
+<div><strong>soil:</strong> cat dodo</div>
+<div><strong>vine:</strong> green</div>
+<div><strong>Description:</strong> My favorite cat. You have no idea how fat he is...</div>
+</div>
+<div class="item_thumbnail_detail">
 <img src="https://uymfys2bhonqflonydvzvqovtrhiilvbxmiezyxq4qla7nc4.arweave.net/phhcS0E7-mwKt_zcDrmsHVnE6ELqG7EE-zi8OQWD7Rc"><br/>
 <div><a href="https://www.spacescan.io/xch/coin/0xc89af613c0b8ff600c6cc443faee692a24dbf3649ae89e12c31a04b041ebcdba"><strong>Name:</strong> Brave Seedling #00065</a></div>
 <div><strong>Collection:</strong> Brave Seedling</div>
@@ -8337,16 +8347,6 @@
 <div><a href="https://www.spacescan.io/xch/coin/0xc203f2aebef4235423084dd2b8393ba5ac119d70fc14da415ca00cf7d7efa8fd"><strong>Name:</strong> Brave Seedling #711</a></div>
 <div><strong>Collection:</strong> Brave Seedling</div>
 <div><strong>background:</strong> speed forward</div>
-<div><strong>seedling:</strong> green strong</div>
-<div><strong>soil:</strong> chia</div>
-<div><strong>Description:</strong> Chia to the moon!</div>
-</div>
-<div class="item_thumbnail_detail">
-<img src="https://dviy3keq4rheifbkpllrtvdhahrv6qf7hw7gyddywbzzaajsqq.arweave.net/HVGNqJDkTkQUKnrXGdRnAeNfQL89vmwM-eLBzkAEyhA"><br/>
-<div><a href="https://www.spacescan.io/xch/coin/0x59980cfaceb5fcdaab01ed8c0e719a8ec2338ffe2942a2690787e4c5da4be01d"><strong>Name:</strong> Brave Seedling #712</a></div>
-<div><strong>Collection:</strong> Brave Seedling</div>
-<div><strong>background:</strong> speed forward</div>
-<div><strong>decoration:</strong> spots</div>
 <div><strong>seedling:</strong> green strong</div>
 <div><strong>soil:</strong> chia</div>
 <div><strong>Description:</strong> Chia to the moon!</div>
