--- a/public/items/Types/index.html
+++ b/public/items/Types/index.html
@@ -2795,7 +2795,7 @@
 <p>The Data that belongs to these Items is a combination of Chia Blockchain Metadata and additional InGame Attributes that are discussed in the community.
 There is some central DataSource needed for the attributes so that i can easily show them on this website.
 So far i collect attributes that i can generate from Blockchain Data and SpaceScan.io API.</p>
-<p>How Data is collected for the following pages is shown here: <a href="https://github.com/RudolfAchter/ChiaShell/blob/master/Powershell/Scripts/Get-ChianiaItems_V4.ps1">Get-ChianiaItems_V4.ps1</a></p>
+<p>How Data is collected for the following pages is shown here: <a href="https://github.com/RudolfAchter/ChiaShell/blob/master/Powershell/Scripts/Get-ChianiaItems_V4.ps1">Get-ChianiaItems_V4.ps1</a>. Raw Data is here <a href="../ChianiaItems.groupByItemType.json">ChianiaItems.groupByItemType.json</a></p>
 
               
             </article>
