--- a/public/world/01_world_map/index.html
+++ b/public/world/01_world_map/index.html
@@ -2838,7 +2838,9 @@
 
 
 <h1 id="map-of-chiania">Map of Chiania</h1>
+<p>For Now there is only <a href="../salvia/00_salvia_main_continent/">Salvia - The Main Continent. So you can directly klick here:</a></p>
 <p>TODO Overview over Continents</p>
+<p>XXX 🏗️ This is a Construction Site 😃</p>
 <ul>
 <li><a href="../salvia/00_salvia_main_continent/">Salvia - Main Continent</a></li>
 </ul>
