--- a/public/index.html
+++ b/public/index.html
@@ -4325,7 +4325,7 @@ Example: <code>!profile</code> : Shows your profile the Mimic bot has registered
 <h2 id="get-equipment-for-your-character">Get Equipment for your character</h2>
 <h3 id="look-which-items-you-can-use-for-chiania">Look which items you can use for Chiania</h3>
 <ul>
-<li><a href="http://0.0.0.0:8082/chiania/public/items/50_types/">Item Types</a></li>
+<li><a href="items/Types/">Item Types</a></li>
 </ul>
 <h3 id="ask-for-offers-on-discord">Ask for Offers on Discord</h3>
 <ul>
