--- a/public/items/Types/Weapon/Chiania_Long_Arm_Blade/Normal_Chiania_Long_Arm_Blade_00001_00100/index.html
+++ b/public/items/Types/Weapon/Chiania_Long_Arm_Blade/Normal_Chiania_Long_Arm_Blade_00001_00100/index.html
@@ -4052,6 +4052,12 @@
 <div><strong>Collection:</strong> <a href="https://www.spacescan.io/xch/nft/collection/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx">Chia Inventory</a></div>
 </div>
 <div class="item_thumbnail">
+<a href="../../../Weapon/Chiania_Long_Arm_Blade/Chiania_Long_Arm_Blade"><img loading="lazy" src="https://wzr7il4cgg7ouvmout5z3w35iofn7zp3tottz2vigxnbxozjdgyq.arweave.net/tmP0L4IxvupVjqT7ndt9Q4rf5fubpzzqqDXaG7spGbE"></a><br/>
+<div><strong>Name:</strong> Chiania Long Arm Blade 11</div>
+<div><strong>Item Type:</strong> <a href="../../../Weapon/Chiania_Long_Arm_Blade/Chiania_Long_Arm_Blade">Chiania Long Arm Blade</a></div>
+<div><strong>Collection:</strong> <a href="https://www.spacescan.io/xch/nft/collection/col16fpva26fhdjp2echs3cr7c30gzl7qe67hu9grtsjcqldz354asjsyzp6wx">Chia Inventory</a></div>
+</div>
+<div class="item_thumbnail">
 <a href="../../../Weapon/Chiania_Long_Arm_Blade/Chiania_Long_Arm_Blade"><img loading="lazy" src="https://iznxfovjn5cyekynpqxiic5l2lm3b3jnxqs35husecceljfiha.arweave.net/RltyuqlvRYIrDXwuhAur0tmw7S28Jb6ekiCE_RaSoOM"></a><br/>
 <div><strong>Name:</strong> Chiania Long Arm Blade 12</div>
 <div><strong>Item Type:</strong> <a href="../../../Weapon/Chiania_Long_Arm_Blade/Chiania_Long_Arm_Blade">Chiania Long Arm Blade</a></div>
