--- a/public/index.html
+++ b/public/index.html
@@ -4653,7 +4653,7 @@ The stats of you character are rerolled at each quest. So your character can hav
 </code></pre></div>
 <p>There is "page forward", "page back" and "cancel" under the help menu. You can click them.</p>
 <p><img alt="" src="2022-07-29-06-29-47.png" /></p>
-<p>So you can use these help Commands</p>
+<p>So you can use these help Commands:</p>
 <p><code>!help Combat</code></p>
 <p><code>!help Location</code></p>
 <p><code>!help Merchant</code></p>
